--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "next": "^8.0.3",
+    "next-offline": "^3.3.5",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-infinite-calendar": "^2.3.1",
