--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@zeit/next-css": "^1.0.1",
     "next": "^8.0.3",
     "next-offline": "^3.3.5",
+    "next-routes": "^1.4.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-infinite-calendar": "^2.3.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
